--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.venovu.energiklart">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,11 +29,11 @@
             android:name=".Rond_activity"
             android:screenOrientation="landscape"
             android:windowSoftInputMode="stateHidden" />
-
-        <activity android:name=".Create_account"
+        <activity
+            android:name=".Create_account"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="stateHidden">
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name=".Login_activity"></activity>
     </application>
 
 </manifest>
