--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar"/>
         />
-        <activity android:name=".Listview_activity"></activity>
+        <activity android:name=".Listview_activity"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="stateHidden"></activity>
     </application>
 
 </manifest>
