--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile files('libs/itextpdf-5.5.9.jar')
-    compile files('build/libs/itextpdf-5.5.9.jar')
+    compile 'com.itextpdf:itextg:5.5.9'
 }
